Bug 1546641 - Fix network markers in the redirection case r=mayhemer

Markers were either incorrect or missing when redirecting a request.

Differential Revision: https://phabricator.services.mozilla.com/D35768